--- a/examples/index.html
+++ b/examples/index.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap5 Dialog</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.css">
     <link rel="stylesheet" href="../dist/css/bootstrap-dialog.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <style>
         pre {
             padding: 9.5px;
@@ -35,7 +36,7 @@
             Monkeys love the <a href="http://getbootstrap.com/javascript/#modals" target="_blank">Modal Dialog from
                 Bootstrap</a>, but they're getting angry because they have to write this stuff:
         </p>
-        <pre class="prettyprint">&lt;div class="modal fade"&gt;<br />  &lt;div class="modal-dialog"&gt;<br />    &lt;div class="modal-content"&gt;<br />      &lt;div class="modal-header"&gt;<br />        &lt;button type="button" class="close" data-dismiss="modal" aria-hidden="true"&gt;&times;&lt;/button&gt;<br />        &lt;h4 class="modal-title"&gt;Modal title&lt;/h4&gt;<br />      &lt;/div&gt;<br />      &lt;div class="modal-body"&gt;<br />        &lt;p&gt;One fine body&hellip;&lt;/p&gt;<br />      &lt;/div&gt;<br />      &lt;div class="modal-footer"&gt;<br />        &lt;button type="button" class="btn btn-default" data-dismiss="modal"&gt;Close&lt;/button&gt;<br />        &lt;button type="button" class="btn btn-primary"&gt;Save changes&lt;/button&gt;<br />      &lt;/div&gt;<br />    &lt;/div&gt;&lt;!-- /.modal-content --&gt;<br />  &lt;/div&gt;&lt;!-- /.modal-dialog --&gt;<br />&lt;/div&gt;&lt;!-- /.modal --&gt;
+        <pre class="prettyprint">&lt;div class="modal fade"&gt;<br />  &lt;div class="modal-dialog"&gt;<br />    &lt;div class="modal-content"&gt;<br />      &lt;div class="modal-header"&gt;<br />        &lt;h5 class="modal-title"&gt;Modal title&lt;/h5&gt;<br />        &lt;button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"&gt;&lt;/button&gt;<br />      &lt;/div&gt;<br />      &lt;div class="modal-body"&gt;<br />        &lt;p&gt;One fine body&hellip;&lt;/p&gt;<br />      &lt;/div&gt;<br />      &lt;div class="modal-footer"&gt;<br />        &lt;button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal"&gt;Close&lt;/button&gt;<br />        &lt;button type="button" class="btn btn-primary"&gt;Save changes&lt;/button&gt;<br />      &lt;/div&gt;<br />    &lt;/div&gt;&lt;!-- /.modal-content --&gt;<br />  &lt;/div&gt;&lt;!-- /.modal-dialog --&gt;<br />&lt;/div&gt;&lt;!-- /.modal --&gt;
     </pre>
         <p>
             What they want is more like this:
@@ -174,7 +175,7 @@
                     alert('Hi Orange!');
                 }
             }, {
-                icon: 'glyphicon glyphicon-ban-circle',
+                icon: 'bi bi-ban',
                 label: 'Button 3',
                 title: 'Mouse over Button 3',
                 cssClass: 'btn-warning'
@@ -477,7 +478,7 @@
                     alert('Hi Orange!');
                 }
             }, {
-                icon: 'glyphicon glyphicon-ban-circle',
+                icon: 'bi bi-ban',
                 label: 'Button 3',
                 cssClass: 'btn-warning'
             }, {
@@ -648,7 +649,7 @@
         BootstrapDialog.show({
             message: 'I send ajax request!',
             buttons: [{
-                icon: 'glyphicon glyphicon-send',
+                icon: 'bi bi-send',
                 label: 'Send ajax request',
                 cssClass: 'btn-primary',
                 autospin: true,
@@ -1031,7 +1032,7 @@
                             message: 'Hello world!',
                             buttons: [{
                             id: 'btn-ok',
-                            icon: 'glyphicon glyphicon-check',
+                            icon: 'bi bi-check-square',
                             label: 'OK',
                             cssClass: 'btn-primary',
                             data: {
@@ -1074,8 +1075,8 @@
                 <tr>
                     <td>spinicon</td>
                     <td>
-                        Icon class name, for example 'glyphicon glyphicon-check'. <br />
-                        <strong>Default value is 'glyphicon glyphicon-asterisk'.</strong>
+                        Icon class name, for example 'bi bi-check-square'. <br />
+                        <strong>Default value is 'bi bi-asterisk'.</strong>
                     </td>
                     <td>
                         Specify what icon to be used as the spinning icon when button's 'autospin' is set to true.
@@ -1239,8 +1240,8 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.js"></script>
-    <script src="../dist/js/bootstrap-dialog.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.js"></script>
+    <script src="../src/js/bootstrap-dialog.js"></script>
 
     <script type="text/javascript">
         $(function () {
