--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Bootstrap5 Dialog</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="../dist/css/bootstrap-dialog.css">
+    <link rel="stylesheet" href="dist/css/bootstrap-dialog.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <style>
         pre {
@@ -1241,7 +1241,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.js"></script>
-    <script src="../dist/js/bootstrap-dialog.js"></script>
+    <script src="dist/js/bootstrap-dialog.js"></script>
 
     <script type="text/javascript">
         $(function () {
