Spinning icon fix

--- a/examples/index.html
+++ b/examples/index.html
@@ -36,7 +36,7 @@
             Monkeys love the <a href="http://getbootstrap.com/javascript/#modals" target="_blank">Modal Dialog from
                 Bootstrap</a>, but they're getting angry because they have to write this stuff:
         </p>
-        <pre class="prettyprint">&lt;div class="modal fade"&gt;<br />  &lt;div class="modal-dialog"&gt;<br />    &lt;div class="modal-content"&gt;<br />      &lt;div class="modal-header"&gt;<br />        &lt;h5 class="modal-title"&gt;Modal title&lt;/h5&gt;<br />        &lt;button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"&gt;&lt;/button&gt;<br />      &lt;/div&gt;<br />      &lt;div class="modal-body"&gt;<br />        &lt;p&gt;One fine body&hellip;&lt;/p&gt;<br />      &lt;/div&gt;<br />      &lt;div class="modal-footer"&gt;<br />        &lt;button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal"&gt;Close&lt;/button&gt;<br />        &lt;button type="button" class="btn btn-primary"&gt;Save changes&lt;/button&gt;<br />      &lt;/div&gt;<br />    &lt;/div&gt;&lt;!-- /.modal-content --&gt;<br />  &lt;/div&gt;&lt;!-- /.modal-dialog --&gt;<br />&lt;/div&gt;&lt;!-- /.modal --&gt;
+        <pre class="prettyprint">&lt;div class="modal fade"&gt;<br />  &lt;div class="modal-dialog"&gt;<br />    &lt;div class="modal-content shadow-lg"&gt;<br />      &lt;div class="modal-header"&gt;<br />        &lt;h5 class="modal-title"&gt;Modal title&lt;/h5&gt;<br />        &lt;button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"&gt;&lt;/button&gt;<br />      &lt;/div&gt;<br />      &lt;div class="modal-body"&gt;<br />        &lt;p&gt;One fine body&hellip;&lt;/p&gt;<br />      &lt;/div&gt;<br />      &lt;div class="modal-footer"&gt;<br />        &lt;button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal"&gt;Close&lt;/button&gt;<br />        &lt;button type="button" class="btn btn-primary"&gt;Save changes&lt;/button&gt;<br />      &lt;/div&gt;<br />    &lt;/div&gt;&lt;!-- /.modal-content --&gt;<br />  &lt;/div&gt;&lt;!-- /.modal-dialog --&gt;<br />&lt;/div&gt;&lt;!-- /.modal --&gt;
     </pre>
         <p>
             What they want is more like this:
@@ -1241,7 +1241,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.js"></script>
-    <script src="../src/js/bootstrap-dialog.js"></script>
+    <script src="../dist/js/bootstrap-dialog.js"></script>
 
     <script type="text/javascript">
         $(function () {
